# TriStateApp

./: CLAUDE.md  README.md  TEST_COVERAGE_ANALYSIS.md  package-lock.json  package.json
personal-assistant/: .env.example  .gitignore  README.md  docker-compose.yml
personal-assistant/backend/: Dockerfile  alembic.ini  pyproject.toml
personal-assistant/backend/alembic/: env.py
personal-assistant/backend/alembic/versions/: 001_initial_schema.py
personal-assistant/backend/app/: config.py  database.py  main.py
personal-assistant/backend/app/agents/: base.py  orchestrator.py  project_agent.py
personal-assistant/backend/app/agents/tools/: project_tools.py
personal-assistant/backend/app/api/: auth.py  briefings.py  chat.py  deps.py  projects.py
personal-assistant/backend/app/models/: __init__.py  briefing.py  conversation.py  integration.py  project.py  research.py  task.py  user.py
personal-assistant/backend/app/schemas/: auth.py  briefing.py  chat.py  project.py  task.py
personal-assistant/backend/app/services/: __init__.py  auth_service.py  crypto_service.py  project_service.py
personal-assistant/backend/app/workers/: settings.py
personal-assistant/web/: package.json
src/: index.js
src/app/: globals.css  layout.tsx
src/app/dashboard/: DashboardShell.tsx  layout.tsx  page.tsx
src/components/dashboard/: ActivityTable.tsx  (+2 more)
src/models/: Task.js  User.js
src/services/: TaskService.js  UserService.js
src/utils/: dateHelper.js  validator.js
tests/models/: Task.test.js
tests/services/: TaskService.test.js
tests/utils/: validator.test.js
(+14 files in other folders)
