[tool.poetry]
name = "personal-assistant-backend"
version = "0.1.0"
description = "Personal AI assistant backend"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.3.0"
anthropic = "^0.40.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
arq = "^0.26.0"
httpx = "^0.27.0"
PyGitHub = "^2.3.0"
google-api-python-client = "^2.130.0"
google-auth-oauthlib = "^1.2.0"
notion-client = "^2.2.1"
feedparser = "^6.0.11"
tavily-python = "^0.3.0"
trafilatura = "^1.12.0"
cryptography = "^42.0.0"
tenacity = "^8.3.0"
structlog = "^24.2.0"
python-multipart = "^0.0.9"
redis = {extras = ["asyncio"], version = "^5.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
